correcting erros in manual and vignette

--- a/vignettes/mcse.bib
+++ b/vignettes/mcse.bib
@@ -70,4 +70,11 @@ pages = "3397--3442",
 publisher = "The Institute of Mathematical Statistics and the Bernoulli Society",
 volume = "12",
 } 
+@article{liu:vats:2021,
+  author =   {Liu, Y and Vats, Dootika and Flegal, J.M.},
+  title =   {Batch Size Selection for Variance Estimators in MCMC},
+  year =   {2021},
+journal = "Methodology and Computing in Applied Probability",
+pages = "1573--7713",
+} 
 
