--- a/vignettes/mcmcse_vignette.Rnw
+++ b/vignettes/mcmcse_vignette.Rnw
@@ -201,6 +201,8 @@ mcerror_isadj <- mcse.initseq(x = chain, g = NULL,
 
 \item \texttt{size} is the batch size for the \texttt{bm} method and the truncation point for \texttt{tukey} and \texttt{bartlett} methods. Default batch size is calulcated using the exported \texttt{batchSize} function. Other accepted values are \texttt{size = sqroot}, which sets the size as $\lfloor \sqrt{n} \rfloor$ and \texttt{size = cuberoot} which sets it at $\lfloor n^{1/3} \rfloor$. An integer value of \texttt{size} less than $n$ is also valid as long as $n/\texttt{size} > 1$.
 
+For reference on \texttt{batchSize} see \cite{liu:vats:2021}.
+
 For reference on \texttt{bm} (batch means estimators) see \cite{jones2006fixed} and \cite{vats:fleg:jones:2017b}.
 
 For reference on \texttt{bartlett} and \texttt{tukey} (spectral variance estimators)see \cite{flegal2010batch} and \cite{vats2015strong}.
